WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100214
[BlackBerry] ASSERT(!needsOneShotDrawingSynchronization()) failed in commitRootLayerIfNeeded()
https://bugs.webkit.org/show_bug.cgi?id=100214
Summary
[BlackBerry] ASSERT(!needsOneShotDrawingSynchronization()) failed in commitRo...
Sean Wang
Reported
2012-10-24 01:31:04 PDT
DESCRIPTION: Assertion failed when I open the tab bar when loading the test case page. HOW TO REPRODUCE: Build webkit repo with debug configuration. Open the test case in the attachment, when it loaded, open the tab bar. EXPECTED: The webpage is hide and the tab bar is shown. ACTUAL: An assertion failed with the stack of following Thread [3] (Suspended: Signal 'SIGSEGV' received. Description: Segmentation fault.) 20 BlackBerry::WebKit::WebPagePrivate::commitRootLayerIfNeeded() WebPage.cpp:5670 0x78eedab8 19 BlackBerry::WebKit::BackingStorePrivate::resumeScreenAndBackingStoreUpdates() BackingStore.cpp:362 0x78eac2c8 18 BlackBerry::WebKit::WebPagePrivate::setViewportSize() WebPage.cpp:3861 0x78ee5bc8 17 BlackBerry::WebKit::WebPage::setViewportSize() WebPage.cpp:3891 0x78ee5d38
Attachments
patch
(3.33 KB, patch)
2012-10-24 01:49 PDT
,
Sean Wang
rwlbuis
: review+
Details
Formatted Diff
Diff
Improved patch
(3.45 KB, patch)
2012-10-24 19:12 PDT
,
Sean Wang
no flags
Details
Formatted Diff
Diff
Patch added "Reviewed by Rob Buis"
(3.43 KB, patch)
2012-10-24 19:23 PDT
,
Sean Wang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Sean Wang
Comment 1
2012-10-24 01:49:48 PDT
Created
attachment 170344
[details]
patch
Rob Buis
Comment 2
2012-10-24 07:47:02 PDT
Comment on
attachment 170344
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=170344&action=review
Looks good. Please consider adding PR number and the internal reviewer before landing.
> Source/WebKit/blackberry/ChangeLog:14 > +
Unneeded empty line here.
Sean Wang
Comment 3
2012-10-24 19:12:23 PDT
Created
attachment 170537
[details]
Improved patch I added internal reviewer and PR number.
Sean Wang
Comment 4
2012-10-24 19:23:39 PDT
Created
attachment 170538
[details]
Patch added "Reviewed by Rob Buis"
Charles Wei
Comment 5
2012-10-24 19:26:37 PDT
Comment on
attachment 170538
[details]
Patch added "Reviewed by Rob Buis" Already reviewed by Rob. Commit it.
WebKit Review Bot
Comment 6
2012-10-24 20:42:12 PDT
Comment on
attachment 170538
[details]
Patch added "Reviewed by Rob Buis" Clearing flags on attachment: 170538 Committed
r132443
: <
http://trac.webkit.org/changeset/132443
>
WebKit Review Bot
Comment 7
2012-10-24 20:42:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug