[BlackBerry] ASSERT(!needsOneShotDrawingSynchronization()) failed in commitRootLayerIfNeeded() https://bugs.webkit.org/show_bug.cgi?id=100214

Patch by Sean Wang <Xuewen.Wang@torchmobile.com.cn> on 2012-10-24
Reviewed by Rob Buis.

ViewportSize has been changed before committing root layer, it asserts
that it needs relayout and render if needed before committing if it
Needs One Shot Drawing Synchronization.
This patch calls requestLayoutIfNeeded() when resumeScreenAndBackingStoreUpdates().

Fix a coding style in the BackingStore.cpp as well.

Reviewed internally by Arvid Nilsson.
PR #230253

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::resumeScreenAndBackingStoreUpdates):

Canonical link: https://commits.webkit.org/118357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132443 268f45cc-cd09-0410-ab3c-d52691b4dbfc